added love button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css">
 <style>
   /* Inline styles for the new My Love for you button */
-  #loveLink{ display:flex; justify-content:center; margin-top:12px; }
+  #loveLink{ display:none; justify-content:center; margin-top:12px; }
   #loveBtn{
     background: linear-gradient(180deg,#ff4b5c,#e53935);
     color:#fff;
