--- a/love.html
+++ b/love.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="assets/love.css" />
 </head>
 <body>
+  <div id="cornerText">This heart show my Love for You</div>
   <main id="stage">
     <div id="heart" class="heart" aria-hidden="true"></div>
 
@@ -20,7 +21,7 @@
 
       <div id="result" aria-live="polite"></div>
 
-      <button id="again" class="again" hidden>click me to see again</button>
+      <button id="again" class="again" hidden>click me to watch again</button>
     </div>
   </main>
 
