--- a/index.html
+++ b/index.html
@@ -33,8 +33,25 @@
 
     <!-- New lovely red button below the restart element -->
     <div id="loveLink">
-      <a href="/love.html" aria-label="Open My Love For You page"><button id="loveBtn">My Love for you</button></a>
+      <button id="loveBtn">My Love for you</button>
     </div>
+</div>
+
+<!-- Love page content (hidden by default) -->
+<div id="loveSection" style="display:none;">
+  <div id="cornerText">This heart show my Love for You</div>
+  <main id="stage">
+    <div id="heart" class="heart" aria-hidden="true"></div>
+    <div id="overlay" role="dialog" aria-labelledby="question">
+      <p id="question">Do You Love me?</p>
+      <div id="choices">
+        <button id="yes" class="choice">Yes</button>
+        <button id="no" class="choice">No</button>
+      </div>
+      <div id="result" aria-live="polite"></div>
+      <button id="again" class="again" hidden>click me to watch again</button>
+    </div>
+  </main>
 </div>
 
 <script src="script.js"></script>
