update love functionality

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 
 <!-- Love page content (hidden by default) -->
 <div id="loveSection" style="display:none;">
-  <div id="cornerText">This heart show my Love for You</div>
   <main id="stage">
     <div id="heart" class="heart" aria-hidden="true"></div>
     <div id="overlay" role="dialog" aria-labelledby="question">
-      <p id="question">Do You Love me?</p>
+      <div id="cornerText">This heart show my Love for You</div>
+      <p id="question">Do You Like me?</p>
       <div id="choices">
         <button id="yes" class="choice">Yes</button>
         <button id="no" class="choice">No</button>
